[tool.poetry]
name = "opa-python-client"
version = "1.3.5"
description = "Client for connection to the OPA service"
authors = ["Tural Muradov <tural_m@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Turall/OPA-python-client"
repository = "https://github.com/Turall/OPA-python-client"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "opa_client"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
urllib3 = ">=1.26.9"
certifi = ">=2022.5.18"
user-agent = "^0.1.10"
types-requests = ">=2.27.30"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
blue = "^0.9.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100