[tool.poetry]
name = "opa-python-client"
version = "2.0.0"
description = "Client for connection to the OPA service"
authors = ["Tural Muradov <tural_m@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Turall/OPA-python-client"
repository = "https://github.com/Turall/OPA-python-client"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "opa_client"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
aiohttp = {extras = ["speedups"], version = "^3.10.9"}
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
exclude = [".venv","tests","migrations"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
